# Royabot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.MD  README.md  docker-compose.yml  pyproject.toml
royabot/: bot.py  config.py  data_processing.py  fetcher.py  util.py
src/royabot/: __init__.py  bot.py  config.py  fetcher.py  indicators.py  util.py
