[project]
name = "royabot"
version = "0.1.0"
description = "智能股票分析 Telegram 機器人，專為台灣股市數據分析設計"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.12.0",
    "loguru>=0.6.0",
    "numpy==1.26.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars==0.20.2",
    "pyarrow>=17.0.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
    "shioaji[speed]>=1.2.8",
    "ta-lib>=0.4.32",
    "xlsx2csv>=0.8.3",
]

[project.scripts]
royabot = "royabot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/royabot"]
